# aoc-ocaml

./: README.md  aoc.opam  aoc.opam.locked  dune-project
.github/workflows/: test.yml  workflow.yml
data/2023/: day16.txt
lib/letops/: command.ml  dune  list.ml  sequence.ml
lib/runner/: dune  printer.ml  run2019.ml  run2022.ml  run2023.ml  runner.ml
lib/util/: array.ml  char.ml  debug.ml  dune  list.ml  list.mli  map.ml  parser.ml  parser.mli  regex.ml  seq.ml  sequence.ml  string.ml
lib/year2019/: day01.ml  dune
lib/year2022/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  dune
lib/year2023/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day20.ml  day21.ml  day22.ml  day23.ml  day24.ml  day25.ml  dune
test/util/: dune  parser_test.ml
test/year2019/: day01_test.ml  dune
test/year2022/: day01_test.ml  day02_test.ml  day03_test.ml  day04_test.ml  day05_test.ml  day06_test.ml  day07_test.ml  day08_test.ml  day09_test.ml  day10_test.ml  day11_test.ml  dune
test/year2023/: day01_test.ml  day02_test.ml  day03_test.ml  day04_test.ml  day05_test.ml  day06_test.ml  day07_test.ml  day08_test.ml  day09_test.ml  day10_test.ml  day11_test.ml  day12_test.ml  day13_test.ml  day14_test.ml  day15_test.ml  day16_test.ml  day17_test.ml  day18_test.ml  day19_test.ml  day20_test.ml  day21_test.ml  day22_test.ml  day23_test.ml  day24_test.ml  day25_test.ml  dune
